# CAbstractAllocator

./: .gitignore  CMakeLists.txt  shell.nix
libsrc/: CMakeLists.txt
libsrc/include/: allocator.h  allocator_types.h  instance_allocator.h  static_allocator.h
libsrc/private/: allocator.c  instance_allocator.c  static_allocator.c
